--- a/calculadora.css
+++ b/calculadora.css
@@ -1,37 +1,37 @@
-form {
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-    border: solid 1px #c2c2c2;
-    padding-bottom: 10px;
-    margin: auto;
-    background: blue;
-  }
-  input[type=textfield] {
-      width: 75%;
-      padding: 16px 32px;
-      font-size: 16px;
-      margin: 8px 0;
-      border: 1px solid silver;
-      border-radius: 1px;
-      text-align: left;
-      color: #ffff;
-      background: black;
-  }
-  input[type=button], input[type=submit], input[type=reset] {
-      background-color: #0081ff;
-      border: none;
-      color: white;
-      padding: 16px 32px;
-      font-size: 16px;
-      min-width: 21%;
-      text-decoration: none;
-      margin: 4px 2px;
-      cursor: pointer;
-  }
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-    background-color: #333;
-  }
+ .calculator-form {
+        display: inline-block;
+        border: 1px solid #ccc;
+        padding: 10px;
+        border-radius: 5px;
+        font-family: Arial, sans-serif;
+    }
+    
+    .calculator-input {
+        width: 200px;
+        height: 30px;
+        margin-bottom: 10px;
+        padding: 5px;
+        font-size: 16px;
+    }
+    
+    .calculator-button {
+        width: 40px;
+        height: 30px;
+        margin-right: 5px;
+        font-size: 16px;
+        background-color: #f0f0f0;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+    
+    .calculator-button:hover {
+        background-color: #e0e0e0;
+    }
+    
+    .calculator-button.operator {
+        background-color: #ccc;
+    }
   h1{
   color: White;
    text-align:center;
